--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,8 @@ h1 {
   border-radius: 8px;
   display: block;
   font-size: 2.5rem;
+  width: 75%;
+  max-width: 300px;
   padding: 10px 20px;
 }
 
@@ -51,7 +53,7 @@ h4 {
 }
 
 main {
-  padding: 30px;
+  padding: 20px;
 }
 
 section {
